maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:1: error: not found: value test
override def run() {while (!test) {while (!isFacingWall()) {right()}; left()}
                            ^