maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {while (!test) {while (!isFacingWall()) {right()}; left()}
  while (!isOverBaggle) {while (!isFacingWall()) {forward(); right()}; left()}; pickupBaggle()}